# yurenizer

./: .gitignore  README.md  README_ja.md  pyproject.toml
.github/workflows/: deploy2pypi.yml  test_publish.yml  unittest.yml
scripts/: post_install.py
tests/: test_csv_synonym_normalizer.py  test_synonym_normalizer.py  test_yurenizer.py
tests/data/: gold_normalized_test.csv  normalized_test.csv  test.csv
yurenizer/: __init__.py  csv_normalizer.py  input_csv.py  loaders.py  normalizer.py  utils.py  yurenizer.py
yurenizer/data/: custom_synonyms.csv  custom_synonyms.json  custom_synonyms.tsv
yurenizer/entities/: __init__.py  flg_option.py  normalizer.py  sudachi_dict.py  synonym.py
