[tool.poetry]
name = "yurenizer"
version = "0.0.1"
description = "A library for standardizing terms with spelling variations using a synonym dictionary."
authors = ["sea-turt1e <h.yamada.bg@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sudachipy = ">=0.6.8"
sudachidict-full = "*"
ipdb = "^0.13.13"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
post-install = "scripts.post_install:post_install"
yurenizer = "yurenizer.yurenizer:run"